--- a/testimonial.html
+++ b/testimonial.html
@@ -37,6 +37,7 @@
         <button>DONATE</button>
       </div>
     </nav>
+  </header>
 
     <section class="Morereviews display">
 
@@ -121,7 +122,7 @@
           </div>
           <div class="txt-only">
             <h1>Hannah</h1>
-            <h5><span>texas,united states</span><i class="fas fa-location-dot"></i></h5>
+            <h5><span>Texas,united states</span><i class="fas fa-location-dot"></i></h5>
             <p>Dear Rachael Dawson Hannah has joined with us and she is one happy and sunny heartbreaker. Lot of energy
               can be used with other friends. Trip went very well and she have adapted so quickly. We are so greatfull
               for service team. Its amazing work you do. Thank you so much. You can find them attached. Warm greetings
@@ -226,6 +227,8 @@
         </div>
       </div>
     </section>
+
+
     <!-- CONTACT SECTION================================ -->
     <section id="contact">
       <div class="cont">
