--- a/index.html
+++ b/index.html
@@ -53,18 +53,21 @@
     <main class="display">
 
       <div class="main-content">
-
-          <div class="homeslider owl-carousel">
-             <div class="homecards homecards-1">hello</div>
-             <div class="homecards homecards-2"></div>
-             <div class="homecards homecards-3"></div>
-             <div class="homecards homecards-4"></div>
-             <div class="homecards homecards-5"></div>
+        <img class="banner-img" src="./images/background.jpg" alt="#">
+        <h1>WELCOME TO <span>DACHSHUND <br> PUPPIES FOR ADOPTION AND REHOMING</span>.</h1>
+        <h1>We believe every animal deserves a <br> second chance.</h1>
+        <a href="mailto:d10505660@gmail.com"><button>SPONSOR A STRAY</button></a>
+        <div class="icons">
+          <div class="icon-div" id="previous">
+            <i class="fas fa-chevron-left"></i>
           </div>
-          <h1>WELCOME TO <span>DACHSHUND <br> PUPPIES FOR ADOPTION AND REHOMING</span>.</h1>
-          <h1>We believe every animal deserves a <br> second chance.</h1>
-          <a href="mailto:d10505660@gmail.com"><button>SPONSOR A STRAY</button></a>
-     </div>
+          <div class="icon-div" id="next">
+            <i class="fas fa-chevron-right"></i>
+          </div>
+        </div>
+        <!-- dots ====== -->
+        <div class="dots"></div>
+      </div>
 
     </main>
 
@@ -364,47 +367,47 @@
       </div>
     </div> -->
     <div class="click-btn display"><a href="./testimonial.html">Click To View more</a></div>
-    </section>
+  </section>
 
 
-    <!-- CONTACT SECTION================================ -->
-    <section id="contact">
+  <!-- CONTACT SECTION================================ -->
+  <section id="contact">
 
-      <div class="cont">
-        <h1><span>CONTACT</span> Us</h1>
-      </div>
-      <div class="cont2 display">
-        <div class="info">
-          <h1>Contact Information</h1>
-          <p><span>Note:</span>your privacy is well secured with us.</p>
-          <div class="email">
-            <i class="fas fa-paper-plane"></i>
-            <p>Email <a href="mailto:d10505660@gmail.com">d10505660@gmail.com</a></p>
-          </div>
-          <div class="email"><i class="fas fa-globe"></i>
-            <p>Website<a href="#"></a></p>
-          </div>
-          <div class="email"><a href="https://m.facebook.com/groups/683801106477892/?ref=share&mibextid=S66gvF"><i
-                class="fab fa-facebook"></i>Go to Facebook group</a></div>
-          <div class="email"><a href="https://www.facebook.com/abdelrazak.ngouloure.1?mibextid=LQQJ4d"><i
-                class="fab fa-facebook"></i>Go to Facebook profile</a></div>
-          <div class="email"><a href="https://m.facebook.com/groups/3606254846365230/?ref=share&mibextid=S66gvF"><i
-                class="fab fa-facebook"></i>Go to partner group</a></div>
-
+    <div class="cont">
+      <h1><span>CONTACT</span> Us</h1>
+    </div>
+    <div class="cont2 display">
+      <div class="info">
+        <h1>Contact Information</h1>
+        <p><span>Note:</span>your privacy is well secured with us.</p>
+        <div class="email">
+          <i class="fas fa-paper-plane"></i>
+          <p>Email <a href="mailto:d10505660@gmail.com">d10505660@gmail.com</a></p>
         </div>
+        <div class="email"><i class="fas fa-globe"></i>
+          <p>Website<a href="#"></a></p>
+        </div>
+        <div class="email"><a href="https://m.facebook.com/groups/683801106477892/?ref=share&mibextid=S66gvF"><i
+              class="fab fa-facebook"></i>Go to Facebook group</a></div>
+        <!-- <div class="email"><a href="https://www.facebook.com/abdelrazak.ngouloure.1?mibextid=LQQJ4d"><i
+                class="fab fa-facebook"></i>Go to Facebook profile</a></div> -->
+        <div class="email"><a href="https://m.facebook.com/groups/3606254846365230/?ref=share&mibextid=S66gvF"><i
+              class="fab fa-facebook"></i>Go to partner group</a></div>
 
-        <form action="">
-          <h2>Subscribe to our Email for updates</h2>
-          <input type="text" placeholder="Name...">
-          <input type="text" placeholder="Email...">
-          <input type="text" placeholder="Your message">
-          <button>Send message</button>
-        </form>
       </div>
-    </section>
 
-    <!-- script section ================================= -->
-    <script src="./script/index.js"></script>
+      <form action="">
+        <h2>Subscribe to our Email for updates</h2>
+        <input type="text" placeholder="Name...">
+        <input type="text" placeholder="Email...">
+        <input type="text" placeholder="Your message">
+        <button>Send message</button>
+      </form>
+    </div>
+  </section>
+
+  <!-- script section ================================= -->
+  <script src="./script/index.js"></script>
 </body>
 
 </html>
