--- a/testimonial.html
+++ b/testimonial.html
@@ -247,8 +247,8 @@
           </div>
           <div class="email"><a href="https://m.facebook.com/groups/683801106477892/?ref=share&mibextid=S66gvF"><i
                 class="fab fa-facebook"></i>Go to Facebook group</a></div>
-          <div class="email"><a href="https://www.facebook.com/abdelrazak.ngouloure.1?mibextid=LQQJ4d"><i
-                class="fab fa-facebook"></i>Go to Facebook profile</a></div>
+          <!-- <div class="email"><a href="https://www.facebook.com/abdelrazak.ngouloure.1?mibextid=LQQJ4d"><i
+                class="fab fa-facebook"></i>Go to Facebook profile</a></div> -->
           <div class="email"><a href="https://m.facebook.com/groups/3606254846365230/?ref=share&mibextid=S66gvF"><i
                 class="fab fa-facebook"></i>Go to partner group</a></div>
 
