--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
         <h1>WELCOME TO <span>DACHSHUND <br> PUPPIES FOR ADOPTION AND REHOMING</span>.</h1>
         <h1>We believe every animal deserves a <br> second chance.</h1>
         <a href="mailto:d10505660@gmail.com"><button>SPONSOR A STRAY</button></a>
-        <div class="icons">
+        <!-- <div class="icons">
           <div class="icon-div" id="previous">
             <i class="fas fa-chevron-left"></i>
           </div>
           <div class="icon-div" id="next">
             <i class="fas fa-chevron-right"></i>
           </div>
-        </div>
+        </div> -->
         <!-- dots ====== -->
         <div class="dots"></div>
       </div>
