--- a/testimonial.html
+++ b/testimonial.html
@@ -254,12 +254,12 @@
 
         </div>
 
-        <form action="">
+        <form id="form">
           <h2>Subscribe to our Email for updates</h2>
-          <input type="text" placeholder="Name...">
-          <input type="text" placeholder="Email...">
-          <input type="text" placeholder="Your message">
-          <button>Send message</button>
+          <input type="text" placeholder="Name..." id="from_name" name="from_name">
+          <input type="text" placeholder="Email..." id="email_id" name="email_id">
+          <textarea type="text" placeholder="Your message" id="message" name="message"></textarea>
+          <input type="submit" id="button" name="button" value="Send Message">
         </form>
       </div>
     </section>
@@ -268,6 +268,14 @@
     <!-- owl carousel js ============================================================== -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js" integrity="sha512-3gJwYpMe3QewGELv8k/BX9vcqhryRdzRMxVfq6ngyWXwo03GFEzjsUm8Q7RZcHPHksttq7/GFoxjCVUjkjvPdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.3.4/owl.carousel.min.js" integrity="sha512-bPs7Ae6pVvhOSiIcyUClR7/q2OAsRiovw4vAkX+zJbw3ShAeeqezq50RIIcIURq7Oa20rW2n2q+fyXBNcU9lrw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+    <!-- script section ================================= -->
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+
+  <script type="text/javascript">
+    emailjs.init('frItkEXc7CibqIxhO')
+  </script>
+<script src="./script/index.js"></script>
 </body>
 
 </html>
