--- a/store.html
+++ b/store.html
@@ -201,7 +201,32 @@
   <script type="text/javascript">
     emailjs.init('frItkEXc7CibqIxhO')
   </script>
-<script src="./script/index.js"></script>
+<!-- <script src="./script/index.js"></script> -->
 </body>
 
 </html>
+
+<script>
+  // contact form
+
+const btn = document.getElementById('button');
+
+document.getElementById('form')
+ .addEventListener('submit', function(event) {
+   event.preventDefault();
+
+   btn.value = 'Sending...';
+
+   const serviceID = 'service_xxlf92z';
+   const templateID = 'template_ra4ript';
+
+   emailjs.sendForm(serviceID, templateID, this)
+    .then(() => {
+      btn.value = 'Send Email';
+      // alert('Sent!');
+    }, (err) => {
+      btn.value = 'Send Email';
+      alert(JSON.stringify(err));
+    });
+});
+</script>
