--- a/index.html
+++ b/index.html
@@ -387,12 +387,11 @@
         <div class="email"><i class="fas fa-globe"></i>
           <p>Website<a href="#"></a></p>
         </div>
-        <div class="email"><a href="https://m.facebook.com/groups/683801106477892/?ref=share&mibextid=S66gvF"><i
-              class="fab fa-facebook"></i>Go to Facebook group</a></div>
+        <!-- <div class="email"><a href="https://m.facebook.com/groups/683801106477892/?ref=share&mibextid=S66gvF"><i class="fab fa-facebook"></i>Go to Facebook group</a></div> -->
         <!-- <div class="email"><a href="https://www.facebook.com/abdelrazak.ngouloure.1?mibextid=LQQJ4d"><i
                 class="fab fa-facebook"></i>Go to Facebook profile</a></div> -->
         <div class="email"><a href="https://m.facebook.com/groups/3606254846365230/?ref=share&mibextid=S66gvF"><i
-              class="fab fa-facebook"></i>Go to partner group</a></div>
+              class="fab fa-facebook"></i>Go to Facebook group</a></div>
 
       </div>
 
