--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <p>Our mission is to provide a home to all the dogs we take care of. We are a temporal shelter for hundreds of
           doggies seeking a second opportunity, and also a permanent home for others that probably will never find a
           family.</p>
-        <p>This organization was founded by Rachael Dawson in 2006 for promoting well-being and respect for animals.</p>
+        <p>This organization was founded by Barbara Griggs in 2014 for promoting well-being and respect for animals.</p>
       </div>
     </div>
 
