--- a/testimonial.html
+++ b/testimonial.html
@@ -80,7 +80,7 @@
           <div class="txt-only">
             <h1><span>Maximus</span></h1>
             <h5><span>California, United States</span><i class="fas fa-location-dot"></i></h5>
-            <p>“A huge THANKS TO YOU Rachael Dawson all the way from California. We are so delighted and thrilled with
+            <p>“A huge THANKS TO YOU Barbara Griggs all the way from California. We are so delighted and thrilled with
               our little Dachshund, Flora. Thank you SO much to Gábor, La Sheika, and our brokers- Doug, and Kaela from
               Coppersmith who helped Flora’s entry into the USA be as smooth and efficient as possible. We had a great
               experience purchasing our Frenchie over-seas. Rachael Dawson and Gábor were very professional, answered
@@ -103,7 +103,7 @@
             <h1>Flora</h1>
             <h5><span>Culpeper, United States</span><i class="fas fa-location-dot"></i>
             </h5>
-            <p>Dear Rachael Dawson, Thank you for Checking in on us and Minni. He is everything I could wish for! He’s
+            <p>Dear Barbara Griggs, Thank you for Checking in on us and Minni. He is everything I could wish for! He’s
               perfect in so many ways and reminds me so much of my Massimo that passed away. Y’all have gave us the love
               of our lives a few times and I want to thank you and the breeders. We renamed him maximus and he already
               knows his name he already knows sit and kisses. We are working on the potty training which […]</p>
@@ -123,7 +123,7 @@
           <div class="txt-only">
             <h1>Hannah</h1>
             <h5><span>Texas,united states</span><i class="fas fa-location-dot"></i></h5>
-            <p>Dear Rachael Dawson Hannah has joined with us and she is one happy and sunny heartbreaker. Lot of energy
+            <p>Dear Barbara Griggs Hannah has joined with us and she is one happy and sunny heartbreaker. Lot of energy
               can be used with other friends. Trip went very well and she have adapted so quickly. We are so greatfull
               for service team. Its amazing work you do. Thank you so much. You can find them attached. Warm greetings
               Kersti</p>
@@ -143,7 +143,7 @@
           <div class="txt-only">
             <h1>Layla</h1>
             <h5><span>Boston,united states</span><i class="fas fa-location-dot"></i></h5>
-            <p>Dear Rachael Dawson, No amount of words can ever express my gratitude to you and your company for the
+            <p>Dear Barbara Griggs, No amount of words can ever express my gratitude to you and your company for the
               wonderful service but above all the wonderful puppy you delivered to me. All the doubts that I had that I
               would get the puppy I was seeing on your website vanished the moment I saw her at the airport. Everything
               went so smooth and your service is impeccable. Much much simpler than I thought! I still cannot believe
@@ -163,7 +163,7 @@
           <div class="txt-only">
             <h1>Piki Bailey</h1>
             <h5><span>Houston,united states</span><i class="fas fa-location-dot"></i></h5>
-            <p>Hello Rachael Dawson, I’m writing to give you a short update on Piki. We have been getting along nicely
+            <p>Hello Barbara Griggs, I’m writing to give you a short update on Piki. We have been getting along nicely
               these first days. He is indeed a cuddly and loving puppy, seems comfortable indoors and quite playful, and
               a bit shy outdoors. (I attached two photos). I’m enjoying my time with him a lot. I took three weeks of
               holidays and later I will work afternoons at home so that he (and me too:-) get accustomed to a new life
@@ -184,7 +184,7 @@
           <div class="txt-only">
             <h1>Josh branca</h1>
             <h5><span>North Carolina,united states</span><i class="fas fa-location-dot"></i></h5>
-            <p>Hey Rachael Dawson , really sorry for take so long to reply your email. Starbucks is doing great, now she
+            <p>Hey Barbara Griggs , really sorry for take so long to reply your email. Starbucks is doing great, now she
               is known as Branca. she is growing fast (wish it was slower), me and my wife we are in love for her. Also
               we can see that she is enjoying going out, to the beach, to the parks.</p>
             <div class="stars">
@@ -217,14 +217,14 @@
 
       <div class="screenshoots display">
         <div class="row display">
-          <div class="boxes"><img src="./images/shoot5.jpg" alt="#"></div>
-          <div class="boxes"> <img src="./images/shoot6.jpg" alt="#"></div>
-          <div class="boxes"> <img src="./images/shoot4.jpg" alt="#"></div>
+          <div class="boxes"><img src="./images/testimonial.jpg" alt="#"></div>
+          <!-- <div class="boxes"> <img src="./images/shoot6.jpg" alt="#"></div>
+          <div class="boxes"> <img src="./images/shoot4.jpg" alt="#"></div> -->
         </div>
-        <div class="row display">
+        <!-- <div class="row display">
           <div class="boxes"><img src="./images/shoot3.jpg" alt="#"></div>
           <div class="boxes"> <img src="./images/shoot2.jpg" alt="#"></div>
-        </div>
+        </div> -->
       </div>
     </section>
 
