--- a/testimonial.html
+++ b/testimonial.html
@@ -34,7 +34,7 @@
         </div>
 
         <!--  -->
-        <button>DONATE</button>
+        <!-- <button>DONATE</button> -->
       </div>
     </nav>
   </header>
@@ -44,9 +44,10 @@
       <div class="describtion-c">
         <h1>DACHSHUND PUPPIES REVIEWS</h1>
         <p>We have more fantastic, and fun reviews on our <a
-            href="https://m.facebook.com/groups/683801106477892/?ref=share&mibextid=S66gvF">Facebook Group</a> and the
-          <a href="https://www.facebook.com/abdelrazak.ngouloure.1?mibextid=LQQJ4d">Dachshund Puppies Facebook
-            Profile</a>. Have a look now at our most recent photos, videos and stories sent to us by Dachshund puppies
+            href="https://m.facebook.com/groups/683801106477892/?ref=share&mibextid=S66gvF">Facebook Group</a> 
+            <!-- and the
+          <a href="https://www.facebook.com/abdelrazak.ngouloure.1?mibextid=LQQJ4d">Dachshund Puppies Facebook Profile</a> -->
+            . Have a look now at our most recent photos, videos and stories sent to us by Dachshund puppies
           owners; loving life with their puppies.
         </p>
       </div>
@@ -75,7 +76,7 @@
 
         <div class="block-div display">
           <div class="image-only">
-            <img src="./images/reveiw7.jpg" alt="#">
+            <img src="./images/testimonial2.jpg" alt="#">
           </div>
           <div class="txt-only">
             <h1><span>Maximus</span></h1>
@@ -118,7 +119,7 @@
 
         <div class="block-div display">
           <div class="image-only">
-            <img src="./images/review9.jpg" alt="">
+            <img src="./images/testimonial1.jpg" alt="">
           </div>
           <div class="txt-only">
             <h1>Hannah</h1>
@@ -280,7 +281,7 @@
 
 </html>
 
-<script>
+<!-- <script>
   // contact form
 
 const btn = document.getElementById('button');
@@ -303,4 +304,4 @@ document.getElementById('form')
       alert(JSON.stringify(err));
     });
 });
-</script>
+</script> -->
