--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       </div>
       <div class="display2">
         <!--  -->
-        <button><a href="mailto:d10505660@gmail.com">DONATE</a></button>
+        <!-- <button><a href="mailto:d10505660@gmail.com">DONATE</a></button> -->
         <i id="menuicon" class="fas fa-bars"></i>
       </div>
     </nav>
