--- a/store.html
+++ b/store.html
@@ -29,7 +29,7 @@
         </div>
 
         <!--  -->
-        <button>DONATE</button>
+        <!-- <button>DONATE</button> -->
       </div>
     </nav>
 
@@ -206,7 +206,7 @@
 
 </html>
 
-<script>
+<!-- <script>
   // contact form
 
 const btn = document.getElementById('button');
@@ -229,4 +229,4 @@ document.getElementById('form')
       alert(JSON.stringify(err));
     });
 });
-</script>
+</script> -->
