--- a/index.html
+++ b/index.html
@@ -384,9 +384,9 @@
           <i class="fas fa-paper-plane"></i>
           <p>Email <a href="mailto:d10505660@gmail.com">d10505660@gmail.com</a></p>
         </div>
-        <div class="email"><i class="fas fa-globe"></i>
+<!--         <div class="email"><i class="fas fa-globe"></i>
           <p>Website<a href="#"></a></p>
-        </div>
+        </div> -->
         <!-- <div class="email"><a href="https://m.facebook.com/groups/683801106477892/?ref=share&mibextid=S66gvF"><i class="fab fa-facebook"></i>Go to Facebook group</a></div> -->
         <!-- <div class="email"><a href="https://www.facebook.com/abdelrazak.ngouloure.1?mibextid=LQQJ4d"><i
                 class="fab fa-facebook"></i>Go to Facebook profile</a></div> -->
