--- a/store.html
+++ b/store.html
@@ -175,7 +175,7 @@
 <!--           <div class="email"><i class="fas fa-globe"></i>
             <p>Website<a href="#"></a></p>
           </div> -->
-          <div class="email"><a href="https://m.facebook.com/groups/683801106477892/?ref=share&mibextid=S66gvF"><i
+          <div class="email"><a href="https://www.facebook.com/share/QGr84HFMHTK29v9T/?mibextid=WaXdOe"><i
                 class="fab fa-facebook"></i>Go to Facebook group</a></div>
           <!-- <div class="email"><a href="https://www.facebook.com/abdelrazak.ngouloure.1?mibextid=LQQJ4d"><i
                 class="fab fa-facebook"></i>Go to Facebook profile</a></div> -->
