--- a/testimonial.html
+++ b/testimonial.html
@@ -44,7 +44,7 @@
       <div class="describtion-c">
         <h1>DACHSHUND PUPPIES REVIEWS</h1>
         <p>We have more fantastic, and fun reviews on our <a
-            href="https://m.facebook.com/groups/683801106477892/?ref=share&mibextid=S66gvF">Facebook Group</a> 
+            href="https://www.facebook.com/share/QGr84HFMHTK29v9T/?mibextid=WaXdOe">Facebook Group</a> 
             <!-- and the
           <a href="https://www.facebook.com/abdelrazak.ngouloure.1?mibextid=LQQJ4d">Dachshund Puppies Facebook Profile</a> -->
             . Have a look now at our most recent photos, videos and stories sent to us by Dachshund puppies
@@ -246,7 +246,7 @@
 <!--           <div class="email"><i class="fas fa-globe"></i>
             <p>Website<a href="#"></a></p>
           </div> -->
-          <div class="email"><a href="https://m.facebook.com/groups/683801106477892/?ref=share&mibextid=S66gvF"><i
+          <div class="email"><a href="https://www.facebook.com/share/QGr84HFMHTK29v9T/?mibextid=WaXdOe"><i
                 class="fab fa-facebook"></i>Go to Facebook group</a></div>
           <!-- <div class="email"><a href="https://www.facebook.com/abdelrazak.ngouloure.1?mibextid=LQQJ4d"><i
                 class="fab fa-facebook"></i>Go to Facebook profile</a></div> -->
